--- a/src/components/MatchCards/matchCardStyle.css
+++ b/src/components/MatchCards/matchCardStyle.css
@@ -1,5 +1,9 @@
 .imgStyles {
-    width: 50px;
-    height: 50px;
+    width: 175px;
+    height: 175px;
     border: 1px solid #000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
 }
